fixed the issue of the bottom overflowing on small screens w/ media query

--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,10 @@ body {
     height: 100vh;
 }
 
+@media (min-width: 600px) {
+    height: 90vh;
+}
+
 .showcase {
     height: 100%;
     color: #FFFFFF;
